cluster/imagestore/backend-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: imagestore
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: backend
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - env:
            - name: PGSTRING
              value: postgres://admin:admin123@postgres:5432/imagestore
          image: vaskozl/imagestored-backend:1.0.1
          imagePullPolicy: IfNotPresent
          name: backend
          ports:
            - containerPort: 4000
          volumeMounts:
            - mountPath: /code/media/
              name: media
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: imagestore-v4
