cluster/imagestore/backend-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: imagestore
spec:
  ports:
    - name: http
      port: 4000
      targetPort: 4000
  selector:
    app: backend
